# routes/users.js
@@ -5,7 +5,9 @@ import {
     getUser,
     getUserFriends,
     updateUser,
-   // addRemoveFriends,
+    followUser,
+    unfollowUser,
+    // addRemoveFriend,
     
 } from "../controllers/users.js";
 
@@ -22,8 +24,13 @@ router.get("/:id/followers", verifyToken , getUserFriends);
 router.patch("/:id", verifyToken, updateUser);
 
 
-// UPDATE
+// UPDATE follower
 
+// Follow a user by user ID
+router.post('/follow/:userId', verifyToken, followUser);
+
+// Unfollow a user by user ID
+router.post('/unfollow/:userId', verifyToken, unfollowUser);
 //router.patch("/:id/followerId", verifyToken, addRemoveFriends);
 
 
